# config/routes.rb
@@ -5,6 +5,9 @@ Rails.application.routes.draw do
   namespace :api do
     post 'csv' => 'csv#index'
     post 'pdf' => 'pdf#index'
+
+    resources :exams, except: [:edit]
+    resources :exam_requests, except: [:edit]
   end
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
